[package]
name = "pyo3-async"
version = "0.2.0"
edition = "2021"
exclude = [".*"]
description = "PyO3 bindings to various Python asynchronous frameworks."
homepage = "https://github.com/wyfo/pyo3-async"
readme = "README.md"
keywords = [
    "pyo3",
    "python",
    "cpython",
    "ffi",
    "async",
]
categories = [
    "api-bindings",
    "asynchronous",
    "development-tools::ffi",
]
license = "MIT"
repository = "https://github.com/wyfo/pyo3-async"

[features]
default = ["allow-threads"]
allow-threads = ["dep:pin-project"]

[dependencies]
futures = "0.3"
pin-project = { version = "1", optional = true }
pyo3 = "0.19"
