[package]
name = "pyo3-async"
description = "PyO3 bindings to various Python asynchronous frameworks."
readme = "README.md"
version.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
version = "0.3.2"
edition = "2021"
exclude = [".*"]
homepage = "https://github.com/wyfo/pyo3-async"
keywords = [
    "pyo3",
    "python",
    "cpython",
    "ffi",
    "async",
]
categories = [
    "api-bindings",
    "asynchronous",
    "development-tools::ffi",
]
license = "MIT"
repository = "https://github.com/wyfo/pyo3-async"

[features]
default = ["macros", "allow-threads"]
macros = ["dep:pyo3-async-macros"]
allow-threads = ["dep:pin-project"]

[dependencies]
futures = "0.3"
pin-project = { version = "1", optional = true }
pyo3 = ">=0.18,<0.21"
pyo3-async-macros = { path = "pyo3-async-macros", version = "=0.3.2", optional = true }

[workspace]
members = ["pyo3-async-macros"]

[badges]
maintenance = { "status" = "deprecated" }
