[package]
name = "pyo3-async-macros"
description = "Procedural macros implementation for pyo3-async."
version.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
pyo3 = "0.19"
pyo3-async = { path = ".." }
